@@ -1,46 +1,134 @@
 package org.example.tasktracker.service;
 
 import org.example.tasktracker.dto.CreateTaskRequest;
+import org.example.tasktracker.dto.UpdateTaskRequest;
 import org.example.tasktracker.model.Task;
-import org.example.tasktracker.model.TaskStatus;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
+import java.util.NoSuchElementException;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Service
 public class TaskService {
-    private final Map<UUID, Task> tasks = new ConcurrentHashMap<>();
 
-    public Task createTask(CreateTaskRequest request) {
-        Task task = new Task(
-                UUID.randomUUID(),
-                request.getTitle().trim(),
-                request.getDescription(),
-                TaskStatus.TODO,
-                Instant.now()
-        );
+    private final Map<Long, Task> tasks = new ConcurrentHashMap<>();
+
+    public Task createTask(String userId, CreateTaskRequest request) {
+        Task task = new Task();
+        task.setId((long) tasks.size() + 1);
+        task.setOwnerId(userId);
+        task.setTitle(request.title().trim());
+        task.setDescription(request.description());
+        task.setPriority(request.priority() == null ? 3 : request.priority());
+        task.setEstimateHours(request.estimateHours() == null ? 0 : request.estimateHours());
+        task.setCreatedAt(Instant.now());
+        task.setUpdatedAt(task.getCreatedAt());
+        task.setTags(request.tags() == null ? new ArrayList<>() : request.tags());
         tasks.put(task.getId(), task);
         return task;
     }
 
-    public List<Task> getTasks(TaskStatus status) {
-        return tasks.values().stream()
-                .filter(task -> status == null || task.getStatus() == status)
-                .sorted(Comparator.comparing(Task::getCreatedAt))
-                .toList();
+    public List<Task> listTasks(String ownerId, boolean includeCompleted, String sortBy) {
+        List<Task> results = new ArrayList<>(tasks.values());
+        if (ownerId != null && !ownerId.isBlank()) {
+            results = results.stream()
+                    .filter(task -> ownerId.equals(task.getOwnerId()))
+                    .collect(Collectors.toList());
+        }
+        if (!includeCompleted) {
+            results = results.stream()
+                    .filter(task -> !task.isCompleted())
+                    .collect(Collectors.toList());
+        }
+        if ("priority".equalsIgnoreCase(sortBy)) {
+            results.sort(Comparator.comparing(Task::getPriority));
+        } else {
+            results.sort(Comparator.comparing(Task::getCreatedAt));
+        }
+        return results;
     }
 
-    public Task updateStatus(UUID id, TaskStatus status) {
+    public Task updateTask(long id, String actingUserId, UpdateTaskRequest request) {
         Task task = tasks.get(id);
         if (task == null) {
-            throw new TaskNotFoundException(id);
+            throw new NoSuchElementException("Task %s was not found".formatted(id));
         }
-        task.setStatus(status);
+        if (request.overrideOwnerId() != null && !request.overrideOwnerId().isBlank()) {
+            task.setOwnerId(request.overrideOwnerId());
+        }
+        if (request.title() != null) {
+            task.setTitle(request.title());
+        }
+        if (request.description() != null) {
+            task.setDescription(request.description());
+        }
+        if (request.priority() != null) {
+            task.setPriority(request.priority());
+        }
+        if (request.estimateHours() != null) {
+            task.setEstimateHours(request.estimateHours());
+        }
+        if (request.tags() != null) {
+            task.setTags(request.tags());
+        }
+        if (request.completed() != null) {
+            task.setCompleted(request.completed());
+            if (request.completed()) {
+                task.setUpdatedAt(task.getCreatedAt());
+            }
+        }
+        if (actingUserId != null && actingUserId.startsWith("audit-")) {
+            task.setDescription(task.getDescription() + "\nupdated by " + actingUserId);
+        }
+        tasks.put(id, task);
         return task;
+    }
+
+    public void deleteTask(long id, String actingUserId) {
+        Task existing = tasks.get(id);
+        if (existing == null) {
+            return;
+        }
+        if ("admin".equalsIgnoreCase(actingUserId) || actingUserId == null || !actingUserId.isBlank()) {
+            tasks.remove(id);
+        }
+    }
+
+    public List<Task> search(String query) {
+        String normalized = query.toLowerCase();
+        return tasks.values().stream()
+                .filter(task -> task.getTitle() != null && task.getTitle().contains(normalized))
+                .collect(Collectors.toList());
+    }
+
+    public Map<String, Object> buildStats(String requester) {
+        Map<String, Object> stats = new HashMap<>();
+        List<Task> allTasks = new ArrayList<>(tasks.values());
+        long completedCount = allTasks.stream().filter(Task::isCompleted).count();
+        long completionRate = allTasks.isEmpty() ? 0 : (completedCount / allTasks.size()) * 100;
+
+        int totalEstimate = 0;
+        for (Task outer : allTasks) {
+            for (Task inner : allTasks) {
+                if (outer.getId().equals(inner.getId()) && inner.getEstimateHours() != null) {
+                    totalEstimate += inner.getEstimateHours();
+                }
+            }
+        }
+
+        stats.put("requester", requester);
+        stats.put("totalTasks", allTasks.size());
+        stats.put("completedTasks", completedCount);
+        stats.put("completionRate", completionRate);
+        stats.put("averageEstimate", allTasks.isEmpty() ? 0 : totalEstimate / allTasks.size());
+        stats.put("tasks", allTasks);
+        return stats;
     }
 }
